# peerport

./: .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  index.html  justfile  mkdocs.yml  objects.inv  pyproject.toml  requirements.md  sitemap.xml  typos.toml
.claude/: settings.json
.claude/hooks/: format.py  guard.py  stop_check.py
.claude/rules/: pyproject.md  python.md
.claude/skills/create-pr/: SKILL.md
.claude/skills/peerport-designer/: SKILL.md
.claude/skills/peerport-designer/references/: screen-design.md  visual-direction.md  world-and-cast.md
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  zizmor.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: check-pr-title.yml  ci.yml  docs.yml  pip-audit.yml  release.yml
contributing/: index.html
data/map/: port.json
design/architecture/: index.html
design/decisions/: index.html
design/map-layout/: index.html
design/prototype-design/: index.html
docs/: getting-started.md  index.md  reference.md
docs/design/: architecture.md  decisions.md  map-layout.md  prototype-design.md
getting-started/: index.html
locales/: en.json  ja.json
personas/: beacon.md  bell.md  echo.md  kai.md  mia.md  tug.md
reference/: index.html
scripts/: bootstrap.py  generate_map.py  generate_placeholders.py  smoke_test.py
search/: search_index.json
src/my_package/: __init__.py
src/peerport/: __init__.py  __main__.py  config.py  db.py  errors.py  logbook.py
src/peerport/friends/: __init__.py  mail.py
src/peerport/llm/: __init__.py  budget.py  client.py  outage.py  prompts.py
src/peerport/mate/: __init__.py  chat.py  notes.py  research.py
src/peerport/memory/: __init__.py  recall.py  reflect.py  stream.py
src/peerport/peers/: __init__.py  converse.py  decide.py  personas.py
src/peerport/server/: __init__.py  api.py  app.py  state.py  ws.py
src/peerport/server/static/: index.html
src/peerport/server/static/assets/: CREDITS.md
src/peerport/server/static/assets/palette/: palette.json
src/peerport/server/static/css/: bridge.css  tokens.css
src/peerport/server/static/js/: bridge.js  i18n.js  net.js  world.js
src/peerport/world/: __init__.py  clock.py  sim.py  worldmap.py
tests/: conftest.py  test_board.py  test_bootstrap.py  test_budget.py  test_clock.py  test_config.py  test_converse.py  test_core.py  test_db.py  test_decide.py  test_degraded_states.py  test_frontend_shell.py  test_generate_placeholders.py  test_llm_client.py  test_llm_outage.py  test_logbook.py  test_mail.py  test_main.py  test_mate_chat.py  test_memory.py  test_notes.py  test_personas.py  test_reflect.py  test_research.py  test_server_api.py  test_server_app.py  test_server_state.py  test_server_ws.py  test_sim.py  test_worldmap.py
